force-app/main/default/objects/CadastralCategories__c/CadastralCategories__c.object-meta.xml
<CustomObject>
    <label>Categorie Catastali</label>
    <nameField>
        <label>Categorie Catastali Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categorie Catastali</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>