force-app/main/default/objects/CadastralCategories__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A01</fullName>
            </value>
            <value>
                <fullName>A02</fullName>
            </value>
            <value>
                <fullName>A03</fullName>
            </value>
            <value>
                <fullName>A04</fullName>
            </value>
            <value>
                <fullName>A05</fullName>
            </value>
            <value>
                <fullName>A06</fullName>
            </value>
            <value>
                <fullName>A07</fullName>
            </value>
            <value>
                <fullName>A08</fullName>
            </value>
            <value>
                <fullName>A09</fullName>
            </value>
            <value>
                <fullName>A10</fullName>
            </value>
            <value>
                <fullName>A11</fullName>
            </value>
            <value>
                <fullName>B01</fullName>
            </value>
            <value>
                <fullName>B02</fullName>
            </value>
            <value>
                <fullName>B03</fullName>
            </value>
            <value>
                <fullName>B04</fullName>
            </value>
            <value>
                <fullName>B05</fullName>
            </value>
            <value>
                <fullName>B06</fullName>
            </value>
            <value>
                <fullName>B07</fullName>
            </value>
            <value>
                <fullName>B08</fullName>
            </value>
            <value>
                <fullName>C01</fullName>
            </value>
            <value>
                <fullName>C02</fullName>
            </value>
            <value>
                <fullName>C03</fullName>
            </value>
            <value>
                <fullName>C04</fullName>
            </value>
            <value>
                <fullName>C05</fullName>
            </value>
            <value>
                <fullName>C06</fullName>
            </value>
            <value>
                <fullName>C07</fullName>
            </value>
            <value>
                <fullName>D01</fullName>
            </value>
            <value>
                <fullName>D02</fullName>
            </value>
            <value>
                <fullName>D03</fullName>
            </value>
            <value>
                <fullName>D04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>