force-app/main/default/objects/CadastralCategories__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrizione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>