force-app/main/default/objects/CadastralCategories__c/fields/Descrizione__c.field-meta.xml
<CustomField>
    <fullName>Descrizione__c</fullName>
    <label>Descrizione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abitazione di tipo signorile.</fullName>
            </value>
            <value>
                <fullName>Abitazione di tipo civile.</fullName>
            </value>
            <value>
                <fullName>Abitazioni di tipo economico.</fullName>
            </value>
            <value>
                <fullName>Abitazioni di tipo popolari.</fullName>
            </value>
            <value>
                <fullName>Abitazioni di tipo ultrapopolare.</fullName>
            </value>
            <value>
                <fullName>Abitazione di tipo rurale.</fullName>
            </value>
            <value>
                <fullName>Abitazione in villini.</fullName>
            </value>
            <value>
                <fullName>Abitazione in villa.</fullName>
            </value>
            <value>
                <fullName>Castelli, palazzi di eminenti pregi artistici o storici.</fullName>
            </value>
            <value>
                <fullName>Uffici e studi privati.</fullName>
            </value>
            <value>
                <fullName>Abitazioni o alloggi tipici dei luoghi.</fullName>
            </value>
            <value>
                <fullName>Collegi e convitti, educandati, ricoveri, orfanotrofi, ospizi, conventi, seminari, caserme.</fullName>
            </value>
            <value>
                <fullName>Case di cura e ospedali senza fine di lucro Prigioni e riformatori.</fullName>
            </value>
            <value>
                <fullName>Uffici Pubblici.</fullName>
            </value>
            <value>
                <fullName>Scuole e laboratori scientifici.</fullName>
            </value>
            <value>
                <fullName>Biblioteche, pinacoteche, musei, gallerie, accademie che non hanno sede in edifici della categoria A09. Circoli ricreativi e culturali, ed attività similari se non hanno fine di lucro.</fullName>
            </value>
            <value>
                <fullName>Cappelle ed oratori non destinati all’esercizio pubblico del culto.</fullName>
            </value>
            <value>
                <fullName>Magazzini sotterranei per depositi di derrate.</fullName>
            </value>
            <value>
                <fullName>Negozi e Botteghe</fullName>
            </value>
            <value>
                <fullName>Magazzini e locali di Deposito</fullName>
            </value>
            <value>
                <fullName>Laboratori per arti e mestieri.</fullName>
            </value>
            <value>
                <fullName>Fabbricati e locali per esercizi sportivi (senza fine di lucro)</fullName>
            </value>
            <value>
                <fullName>Stabilimenti balneari e di acque curative (senza fine di lucro).</fullName>
            </value>
            <value>
                <fullName>Stalle, scuderie, rimesse, autorimesse.</fullName>
            </value>
            <value>
                <fullName>Tettoie chiuse od aperte.</fullName>
            </value>
            <value>
                <fullName>Opifici.</fullName>
            </value>
            <value>
                <fullName>Alberghi e pensioni (con fine di lucro).</fullName>
            </value>
            <value>
                <fullName>Teatri, cinematografi, sale per concerti e spettacoli e simili (con fine di lucro).</fullName>
            </value>
            <value>
                <fullName>Case di cura ed ospedali (con fine di lucro)</fullName>
            </value>
            <value>
                <fullName>Istituto di credito, cambio e assicurazione (con fine di lucro).</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>