force-app/main/default/objects/CadastralCategories__c/fields/Destinazione__c.field-meta.xml
<CustomField>
    <fullName>Destinazione__c</fullName>
    <label>Destinazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ImmobiliI a Destinazione Ordinaria</fullName>
            </value>
            <value>
                <fullName>Immobili a Destinazione Speciale o Particolare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>