force-app/main/default/objects/CadastralCategories__c/fields/Informations__c.field-meta.xml
<CustomField>
    <fullName>Informations__c</fullName>
    <label>Informazioni</label>
    <length>255</length>
    <type>Text</type>
</CustomField>