force-app/main/default/objects/CadastralCategories__c/fields/Informazioni__c.field-meta.xml
<CustomField>
    <fullName>Informazioni__c</fullName>
    <label>Informazioni</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Coefficiente per il calcolo valore ai fini IMU: 168</fullName>
            </value>
            <value>
                <fullName>Coefficiente per il calcolo valore ai fini IMU: 57,75</fullName>
            </value>
            <value>
                <fullName>Coefficiente per il calcolo valore ai fini IMU: 84</fullName>
            </value>
            <value>
                <fullName>Coefficiente per il calcolo valore ai fini IMU: Esente</fullName>
            </value>
            <value>
                <fullName>Coefficiente per il calcolo valore ai fini IMU: Stima del valore attribuita dal proprietario.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>